--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "node-fetch": "^3.3.2",
     "node-input-validator": "^4.5.1",
     "nodemailer": "^7.0.3",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "uuid": "^11.1.0"
   }
 }
