--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
+    "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-country-flag": "^3.1.0",
+    "react-datepicker": "^8.5.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
